--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ body{
     "footer ";
     gap: 10px;
     background-color: #e6b9fb;
+    color : #564592;
 }
 
 header{
@@ -38,7 +39,8 @@ footer{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10%;
+    gap: 5%;
+    background-color: #724cf9;
 }
 img{
     width: 100%;
@@ -64,6 +66,11 @@ img{
 .menu-item{
     list-style: none;
     font-size: 25px;
+}
+
+.menu-links{
+    text-decoration: none;
+    color : #564592;
 }
 
 /*Estilos de los iconos*/
@@ -100,9 +107,30 @@ img{
 #titulo{
     text-align: center;
     font-size: 50px;
-    text-decoration: 2px dotted black;
+    text-decoration: underline;
+}
+#slogan{
+    font-size: 40px;
+    border-bottom: 4px dotted #564592;
+    display: inline-block;
 }
 
+p{
+    font-size:20px
+}
+.datosUtilesRapidos{
+    color : #edf67d;
+}
+
+.motivacion{
+    color : #edf67d;
+    font-size: 30px;
+}
+
+.cartaCompleta{
+    text-decoration: none;
+    color: black;
+}
 @media screen and (min-width: 768px) {
     body{
         grid-template-columns: 0.2fr 1fr;
@@ -128,6 +156,7 @@ img{
         display: flex;
         justify-content: center;
         align-items: center;
+
     }
 
     #menu{
